force-app/main/default/objects/LL_RH_event__e/LL_RH_event__e.object-meta.xml
<CustomObject>
    <label>LL_RH_event</label>
    <pluralLabel>LL_RH_event</pluralLabel>
</CustomObject>