force-app/main/default/objects/LL_RH_event__e/fields/Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Id__c</fullName>
    <label>Appointment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>