force-app/main/default/objects/LL_RH_event__e/fields/OldAppointmentDate__c.field-meta.xml
<CustomField>
    <fullName>OldAppointmentDate__c</fullName>
    <label>OldAppointmentDate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>