force-app/main/default/objects/LL_RH_event__e/fields/OldAppointmentTime__c.field-meta.xml
<CustomField>
    <fullName>OldAppointmentTime__c</fullName>
    <label>OldAppointmentTime</label>
    <length>80</length>
    <type>Text</type>
</CustomField>