force-app/main/default/objects/LL_RH_event__e/fields/ParticipantEnrollment_ID__c.field-meta.xml
<CustomField>
    <fullName>ParticipantEnrollment_ID__c</fullName>
    <label>ParticipantEnrollment_ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>